--------------------------------------------------------------------------------------------------
Release notes version 1.9.5_beta : Enhancements, modifications and corrected bugs since version 1.9.4 :
--------------------------------------------------------------------------------------------------
21/10/24 (TRUST) Bug fix      : In VEF, Viscous forces on boundaries (printed in *_Contrainte_visqueuse*.out files) in incompressible Navier-Stokes equations were computed as Integral(-mu*grad(u)*ndS). It is now computed as Integral(-mu*(grad(u) +grad(u)^T)*ndS).
18/10/24 (TRUST) Minor change : To force C++14 build of TRUST, you should add configure option -std=c++14. Else by default, it will use C++17 as TRUST features from Kokkos (GPU, SIMD, OpenMP) are not available with C++14
18/10/24 (TRUST) Fix          : .out files were not closed at the end of the calculation leaving opened file descriptors
17/10/24 (TRUST) GPU          : Upgrade AmgX multigrid solvers with a better performance (10-15%) noticed on benchmarks
17/10/24 (TRUST) GPU          : When enabling GPU communications with MPI GPU-aware library, fix KSP_DIVERGED produced by PETSc GPU solvers (especially when using classical multigrid preconditioners) by using OpenMPI 5.x instead of OpenMPI 4.x
07/10/24 (TRUST) New Keyword  : Added a new correlation for Nusselt heat flux, including Nusselt parser with Reynolds (Re) and Prandtl (Pr) number dependency.
07/10/24 (TRUST) New Feature  : Move correlation structures from Pb_Multiphase to Probleme_base (allow to use CMFD type turbulence or parietal heat transfer correlations with (thermo)hydraulic problems for example). TrioCFD needed for turbulence equations.
07/10/24 (TRUST) Tools        : Patched MEDCoupling to add crackAlong() functionality.
26/09/24 (TRUST) Change       : cmake upgraded from 3.22 to 3.30.
26/09/24 (TRUST) Change       : python upgraded from 3.7 to 3.12.
26/09/24 (TRUST) Change       : mpi4py upgraded from 3.0.3 to 4.0.0.