@@ -25,7 +25,7 @@ if [ ! -f $KOKKOS_ROOT_DIR/lib64/libkokkos.a ]; then
       src_dir=$build_dir/kokkos
 
       # Set this flag to 1 to have Kokkos compiled/linked in Debug mode for $exec_debug or when developping on GPU:
-      if [ $HOST = $TRUST_HOST_ADMIN ] || [ "$TRUST_USE_OPENMP" = 1 ]
+      if [ $HOST = $TRUST_HOST_ADMIN ] || [ "$TRUST_USE_OPENMP" = 1 ] || [ "$TRUST_USE_KOKKOS_SIMD" = 1 ]
       then
          build_debug=1
       else
@@ -37,15 +37,15 @@ if [ ! -f $KOKKOS_ROOT_DIR/lib64/libkokkos.a ]; then
         rm -rf BUILD
         mkdir -p BUILD
         cd BUILD
-	if [ "$TRUST_CC_BASE_EXTP" != "" ] && [ "$TRUST_USE_CUDA" = 1 ]
-	then
+        if [ "$TRUST_CC_BASE_EXTP" != "" ] && [ "$TRUST_USE_CUDA" = 1 ]
+        then
            CMAKE_OPT="-DCMAKE_CXX_COMPILER=$TRUST_CC_BASE_EXTP"
-	else
-	   CMAKE_OPT="-DCMAKE_CXX_COMPILER=$TRUST_CC_BASE"
-	   # To use nvc++ as device compiler (nvcc ~ nvc++ -gpu):
-	   [ "`basename $TRUST_CC_BASE`" = nvc++ ] && CMAKE_OPT="$CMAKE_OPT -DKokkos_ENABLE_IMPL_NVHPC_AS_DEVICE_COMPILER=ON"
-	fi
-	CMAKE_OPT="$CMAKE_OPT -DCMAKE_CXX_FLAGS=-fPIC"
+        else
+           CMAKE_OPT="-DCMAKE_CXX_COMPILER=$TRUST_CC_BASE"
+           # To use nvc++ as device compiler (nvcc ~ nvc++ -gpu):
+           [ "`basename $TRUST_CC_BASE`" = nvc++ ] && CMAKE_OPT="$CMAKE_OPT -DKokkos_ENABLE_IMPL_NVHPC_AS_DEVICE_COMPILER=ON"
+        fi
+        CMAKE_OPT="$CMAKE_OPT -DCMAKE_CXX_FLAGS=-fPIC"
         if [ "$TRUST_USE_CUDA" = 1 ]
         then
            # Kokkos use CUDA_ROOT pour trouver nvcc !!!!
@@ -70,14 +70,14 @@ if [ ! -f $KOKKOS_ROOT_DIR/lib64/libkokkos.a ]; then
            [ "$TRUST_USE_OPENMP" = 1 ] && CMAKE_OPT="$CMAKE_OPT -DKokkos_ENABLE_CUDA_RELOCATABLE_DEVICE_CODE=ON"
         elif [ "$TRUST_USE_ROCM" = 1 ]
         then
-	   if [ "$TRUST_USE_KOKKOS_HIP" = 1 ]
-	   then
+           if [ "$TRUST_USE_KOKKOS_HIP" = 1 ]
+           then
               CMAKE_OPT="$CMAKE_OPT -DKokkos_ENABLE_HIP=ON"
               #CMAKE_OPT="$CMAKE_OPT -DKokkos_ENABLE_HIP_MULTIPLE_KERNEL_INSTANTIATIONS" # faster but slow build
-	   else
+           else
               # Impossible de mixer HIP et OpenMP dans une meme translation unit, on utilise le backend OPENMPTARGET:
               CMAKE_OPT="$CMAKE_OPT -DKokkos_ENABLE_OPENMPTARGET=ON" # Slow on MI250
-	   fi
+           fi
            CMAKE_OPT="$CMAKE_OPT -DCMAKE_CXX_STANDARD=17"
            [ "$ROCM_ARCH" = gfx90a ] && CMAKE_OPT="$CMAKE_OPT -DKokkos_ARCH_AMD_GFX90A=ON"
         fi
